spectec/test/elab/neg/type-funarg-shape-mismatch-sig.spectec
;; A `def` clause introduces a function-argument with a name that
;; differs from the parameter's declared name.

dec $g : nat
def $g = 0

dec $caller(def $expected : nat) : nat
def $caller(def $g) = 0
